--- a/localisation/useful_heirs_l_english.yml
+++ b/localisation/useful_heirs_l_english.yml
@@ -9,11 +9,11 @@
 # l_korean:
 # l_japanese:
 
- edict_useful_heirs_1:0 "Summon my Heir"
- edict_useful_heirs_1_desc:0 "There are matters that must be disccused with my heir."
+ edict_useful_heirs_1: "Summon my Heir"
+ edict_useful_heirs_1_desc: "There are matters that must be disccused with my heir."
 
- edict_useful_heirs_2:0 "Appoint Heir"
- edict_useful_heirs_2_desc:0 "The absence of an heir is a danger to the realm. I must appoint an heir."
+ edict_useful_heirs_2: "Appoint Heir"
+ edict_useful_heirs_2_desc: "The absence of an heir is a danger to the realm. I must appoint an heir."
 
  decision_set_dynasty_name: "Begin New Dynasty"
  decision_set_dynasty_name_desc: "We will forge ahead into the future under the care of a new dynasty."
@@ -21,37 +21,37 @@
 
  usefulheirs.2000.AI: "AI"
 
- usefulheirs.1000.name:0 "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
- usefulheirs.1000.desc:0 "You summoned me, my §Y[root.GetRulerTitle]§!?"
+ usefulheirs.1000.name: "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
+ usefulheirs.1000.desc: "You summoned me, my §Y[root.GetRulerTitle]§!?"
 
- usefulheirs.1000.a:0 "I need you to take on a different role."
- usefulheirs.1000.a.tooltip:0 "Will we will able to assign our heir to a leadership position within our empire."
- usefulheirs.1000.b:0 "You are unworthy of being my heir."
- usefulheirs.1000.b.ad:0 "The time has come for me to designate an heir."
- usefulheirs.1000.b.tooltip:0 "We can look for a new heir from amongst our leaders, or simply disinherit our heir."
- usefulheirs.1000.c:0 "I intend to abdicate. The time has come for you to lead."
- usefulheirs.1000.c.tooltip:0 "We will retire and our heir shall take over."
- usefulheirs.1000.d:0 "Nevermind."
+ usefulheirs.1000.a: "I need you to take on a different role."
+ usefulheirs.1000.a.tooltip: "Will we will able to assign our heir to a leadership position within our empire."
+ usefulheirs.1000.b: "You are unworthy of being my heir."
+ usefulheirs.1000.b.ad: "The time has come for me to designate an heir."
+ usefulheirs.1000.b.tooltip: "We can look for a new heir from amongst our leaders, or simply disinherit our heir."
+ usefulheirs.1000.c: "I intend to abdicate. The time has come for you to lead."
+ usefulheirs.1000.c.tooltip: "We will retire and our heir shall take over."
+ usefulheirs.1000.d: "Nevermind."
 
- usefulheirs.2000.cesc:0 "How may I best serve you and the §Y[Root.GetName]§!?"
+ usefulheirs.2000.cesc: "How may I best serve you and the §Y[Root.GetName]§!?"
 
- usefulheirs.2000.a:0 "As an $official_with_icon$"
- usefulheirs.2000.b:0 "As a $commander_with_icon$"
- usefulheirs.2000.c:0 "As a $scientist_with_icon$"
- usefulheirs.2000.back:0 "Actually, your current role is fine."
+ usefulheirs.2000.a: "As an $official_with_icon$"
+ usefulheirs.2000.b: "As a $commander_with_icon$"
+ usefulheirs.2000.c: "As a $scientist_with_icon$"
+ usefulheirs.2000.back: "Actually, your current role is fine."
 
- usefulheirs.3000.desc:0 "My [root.GetRulerTitle], I beg you to reconsider!"
- usefulheirs.3000.ad.desc:0 "Of course, my [root.GetRulerTitle]."
+ usefulheirs.3000.desc: "My [root.GetRulerTitle], I beg you to reconsider!"
+ usefulheirs.3000.ad.desc: "Of course, my [root.GetRulerTitle]."
 
- usefulheirs.3100.name:0 "[root.GetRulerTitle] §H[root.ruler.GetName]§!"
- usefulheirs.3100.desc:0 "Who is worthy to be my heir?"
+ usefulheirs.3100.name: "[root.GetRulerTitle] §H[root.ruler.GetName]§!"
+ usefulheirs.3100.desc: "Who is worthy to be my heir?"
 
- usefulheirs.3000.a:0 "One of our §YOfficials§! shall be my heir."
- usefulheirs.3000.b:0 "One of our §YCommanders§! shall be my heir."
- usefulheirs.3000.d:0 "One of our §YScientists§! shall be my heir."
- usefulheirs.3000.e:0 "The next in the line of succession shall take your place."
- usefulheirs.3000.f:0 "Perhaps you may still prove yourself."
- usefulheirs.3000.f.ad:0 "The time is not yet right."
+ usefulheirs.3000.a: "One of our §YOfficials§! shall be my heir."
+ usefulheirs.3000.b: "One of our §YCommanders§! shall be my heir."
+ usefulheirs.3000.d: "One of our §YScientists§! shall be my heir."
+ usefulheirs.3000.e: "The next in the line of succession shall take your place."
+ usefulheirs.3000.f: "Perhaps you may still prove yourself."
+ usefulheirs.3000.f.ad: "The time is not yet right."
 
  usefulheirs.3110.name: "Officials"
  usefulheirs.3120.name: "Commanders"
@@ -81,7 +81,7 @@
  saved_dynastic_name: "[root.ruler.GetSecondName]"
  new_dynastic_name: "[root.GetName]"
 
- usefulheirs.3500.name: "§YNew Heir Presumptive§!"
+ usefulheirs.3500.name: "§YNew Heir Apparent§!"
  usefulheirs.3500.desc: "A grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now §Yheir§! to the throne. As would be expected with a change of this magnitude, there are those throughout the realm that have been expressing their discontent. The former §Yheir§!, §H[disinherited_heir_fatherland.GetName]§!§H[disinherited_heir.GetName]§!, still has their supporters. Hopefully this discontent will die down in time." #This is a convenient little trick
  usefulheirs.3500.ad.desc: "In line with our customs and traditions, a grand coronation ceremony was held today in the capital, and broadcast throughout our empire. §H[new_chosen_heir.GetName]§! has been proclaimed the new §Y[root.GetHeirTitle]§!, and is now heir to the throne."
 
@@ -91,7 +91,7 @@
  uh_adoptive.1110.a: "We will prove ourselves."
 
  uh_adoptive.2010.name: "§RDesignated Heir Dies§!"
- uh_adoptive.2010.desc: "In a great loss to the empire, [deceased_heir.GetTitle] §H[deceased_heir.GetName]§!, the §YHeir Presumptive§!, has passed away. A new §Yheir§! will need to be appointed."
+ uh_adoptive.2010.desc: "In a great loss to the empire, [deceased_heir.GetTitle] §H[deceased_heir.GetName]§!, the §YHeir Apparent§!, has passed away. A new §Yheir§! will need to be appointed."
 
  uh_adoptive.2010.a: "Tragic."
 
@@ -100,61 +100,62 @@
 
  uh_adoptive.3015.a: "Our line will prove themselves."
 
- heir_fired_name:0 "[event_target:clone_leader_name_1.GetName]"
- heir_name_bold:0 "§H[event_target:heir_leader.GetName]§!"
- ruler_name_white:0 "§![root.ruler.GetName]§!"
+ heir_fired_name: "[event_target:clone_leader_name_1.GetName]"
+ heir_name_bold: "§H[event_target:heir_leader.GetName]§!"
+ ruler_name_white: "§![root.ruler.GetName]§!"
 
- usefulheirs.4000.name:0 "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
- usefulheirs.4000.desc:0 "My [root.GetRulerTitle], are you sure?"
+ usefulheirs.4000.name: "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
+ usefulheirs.4000.desc: "My [root.GetRulerTitle], are you sure?"
 
- usefulheirs.4000.a:0 "Actually, I'm not sure. I'll give it further consideration."
- usefulheirs.4000.b:0 "I am sure. It's your time. I will retire."
- usefulheirs.4000.b.tooltip:0 "We will retire."
- usefulheirs.4000.c:0 "I am. However, I know that I can still contribute in other capacities."
- usefulheirs.4000.c.tooltip:0 "We will retire from ruling and choose another leadership position within our empire."
+ usefulheirs.4000.a: "Actually, I'm not sure. I'll give it further consideration."
+ usefulheirs.4000.b: "I am sure. It's your time. I will retire."
+ usefulheirs.4000.b.tooltip: "We will retire."
+ usefulheirs.4000.c: "I am. However, I know that I can still contribute in other capacities."
+ usefulheirs.4000.c.tooltip: "We will retire from ruling and choose another leadership position within our empire."
 
- usefulheirs.4010.name:0 "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
- usefulheirs.4010.desc:0 "If that is what you wish. I won't dissapoint you. What do you want to do?"
+ usefulheirs.4010.name: "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
+ usefulheirs.4010.desc: "If that is what you wish. I won't dissapoint you. What do you want to do?"
 
- usefulheirs.4010.a:0 "I will serve as an Official within our realm."
- usefulheirs.4010.b:0 "I will lead our troops as a Commander."
- usefulheirs.4010.d:0 "I will pursue knowledge as a Scientist."
+ usefulheirs.4010.a: "I will serve as an Official within our realm."
+ usefulheirs.4010.b: "I will lead our troops as a Commander."
+ usefulheirs.4010.d: "I will pursue knowledge as a Scientist."
 
 
- usefulheirs.4051.a:0 "I will lead."
+ usefulheirs.4051.a: "I will lead."
 
- response_they_shall_accept:0 "They will accept it."
- response_excellent:0 "Excellent"
+ response_they_shall_accept: "They will accept it."
+ response_excellent: "Excellent"
 
  dis_heir_reg: "[event_target:disinherited_heir.GetName]"
  dis_heir_fatherland: "[event_target:disinherited_heir_fatherland.GetName]"
 
- unity_fail_text:0 "§RRequires§! §Y[Root.monthly_unity_prod]§! £unity£ §YUnity§!"
+ unity_fail_text: "§RRequires§! §Y[Root.monthly_unity_prod]§! £unity£ §YUnity§!"
 
  ### Civics
  civic_adoptive_dynasties: "Adoptive Dynasties"
- civic_adoptive_dynasties_desc: "A dynasty of inneffective rulers in the distant past has led to a tradition in this society whereby the monarch typically appoints their heir from amongst the most capable individuals in their court. This has resulted in a very stable empire. However, until an heir is appointed, the heir is still chosen via absolute primogeniture."
+ civic_adoptive_dynasties_desc: "Tradition in this society holds that the monarch typically appoints their heir from amongst the most capable individuals in their court. This has resulted in a very stable empire. However, until an heir is appointed, the heir is still chosen via absolute primogeniture."
+ civic_adoptive_dynasties_desc_corporate: "Tradition in this company holds that the the CEO typically appoints their heir from amongst the most capable individuals on their board. This has resulted in a very profitable company. However, until an heir is appointed, the heir is still chosen by the board of directors."
  civic_tooltip_adoptive_dynasties_effects: "No £stability£ §YStability§! penalty or £influence£ §YInfluence§! cost to designate an heir."
  civic_tooltip_adoptive_dynasties_negative_effects: "A non-designated heir becoming ruler will lower £stability£ §YStability§! for §Y10 years§! by §R20§! on every planet except the capital, where stability will be lowered by §R25§!."
 
- civic_tooltip_heir:0 "Must have an §YHeir§!"
+ civic_tooltip_heir: "Must have an §YHeir§!"
 
  # Modifiers
  chose_new_heir: "New Heir"
- chose_new_heir_desc: "The appointment of a new heir has caused some disruption to the ruling elite on this planet. It will take them some time to adjust to this new reality."
+ chose_new_heir_desc: "The appointment of a new heir has caused some disruption to the ruling elite of this planet. It will take them some time to adjust to this new political reality."
 
  chose_new_heir_capital: "New Heir"
- chose_new_heir_capital_desc: "The appointment of a new heir has caused significant disruption to the ruling elite of the capital. It will take them time to adjust to this new reality."
+ chose_new_heir_capital_desc: "The appointment of a new heir has caused significant disruption to the ruling elite of the capital. It will take them time to adjust to this new political reality."
 
- dynastic_heir: "Dynastic Ruler"
- dynastic_heir_desc: "Due to trauma from the past, the ascension of a dynastic heir has caused a considerable amount of distress on this planet."
+ dynastic_heir: "Dynastic [owner.GetRulerTitle]"
+ dynastic_heir_desc: "The ascension of a dynastic heir has caused a considerable amount of distress on this planet."
 
- dynastic_heir_capital: "Dynastic Ruler"
- dynastic_heir_capital_desc: "Due to trauma from the past, the ascension of a dynastic heir has caused a considerable amount of distress in the capital."
+ dynastic_heir_capital: "Dynastic [owner.GetRulerTitle]"
+ dynastic_heir_capital_desc: "The ascension of a dynastic heir has caused a considerable amount of distress in the capital."
 
  # Councilors
- councilor_adoptive_dynasties:0 "Heir Presumptive"
- councilor_adoptive_dynasties_female:0 "Heir Presumptive"
- councilor_adoptive_dynasties_desc:0 "In order to prepare for their eventual succession, the $TITLE$ receives extensive training on how to manage the realm."
+ councilor_adoptive_dynasties: "Heir Apparent"
+ councilor_adoptive_dynasties_female: "Heir Apparent"
+ councilor_adoptive_dynasties_desc: "In order to prepare for their eventual succession, the $TITLE$ receives extensive training on how to manage the realm."
  mod_councilor_adoptive_dynasties_exp_gain: "$councilor_adoptive_dynasties_official_with_icon$ $exp_gain$"
- councilor_adoptive_dynasties_official_with_icon:0 "£ruler£ $councilor_adoptive_dynasties$"
+ councilor_adoptive_dynasties_official_with_icon: "£ruler£ $councilor_adoptive_dynasties$"
