--- a/localisation/useful_heirs_l_simp_chinese.yml
+++ b/localisation/useful_heirs_l_simp_chinese.yml
@@ -9,38 +9,38 @@ l_simp_chinese:
 # l_korean:
 # l_japanese:
 
- edict_useful_heirs_1:0 "传唤我的继承人"
- edict_useful_heirs_1_desc:0 "有些事情必须和我的继承人商量。"
- edict_useful_heirs_2:0 "指定继承人"
- edict_useful_heirs_2_desc:0 "没有继承人对王国是一种危险。我必须指定一个继承人。"
+ edict_useful_heirs_1: "传唤我的继承人"
+ edict_useful_heirs_1_desc: "有些事情必须和我的继承人商量。"
+ edict_useful_heirs_2: "指定继承人"
+ edict_useful_heirs_2_desc: "没有继承人对王国是一种危险。我必须指定一个继承人。"
  usefulheirs.2000.AI: "AI"
- usefulheirs.1000.name:0 "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
- usefulheirs.1000.desc:0 "您传唤我，[root.GetRulerTitle]?"
- usefulheirs.1000.a:0 "我需要你扮演一个不同的角色。"
- usefulheirs.1000.a.tooltip:0 "我们将能够指派我们的继承人在我们的帝国内担任领导职务。"
- usefulheirs.1000.b:0 "你不配做我的继承人"
- usefulheirs.1000.b.ad:0 "现在是我指定继承人的时候了。"
- usefulheirs.1000.b.tooltip:0 "我们可以从我们的领导人中寻找新的继承人，或者干脆剥夺继承人的继承权。"
- usefulheirs.1000.c:0 "我打算退位。现在是你领导的时候了。"
- usefulheirs.1000.c.tooltip:0 "我们将退位，我们的继承人将接任。"
- usefulheirs.1000.d:0 "没关系。"
- usefulheirs.2000.name:0 "[root.GetHeirTitle][event_target:heir_leader.GetName]"
- usefulheirs.2000.cesc:0 "我今天该如何为[Root.GetName]效力？"
- usefulheirs.2000.a:0 "作为$official_with_icon$"
- usefulheirs.2000.b:0 "作为$commander_with_icon$"
- usefulheirs.2000.c:0 "作为$scientist_with_icon$"
- usefulheirs.2000.e:0 "事实上，你不需要承担任何其他责任。"
- usefulheirs.3000.desc:0 "[root.GetRulerTitle]，我请求你重新考虑一下！"
- usefulheirs.3000.ad.desc:0 "当然可以，[root.GetRulerTitle]"
- usefulheirs.3100.name:0 "[root.GetRulerTitle] §H[root.ruler.GetName]§!"
- usefulheirs.3100.desc:0 "谁配做我的继承人？"
- usefulheirs.3000.a:0 "我们的一位总督将是我的继承人。"
- usefulheirs.3000.b:0 "我们的一位舰队司令将是我的继承人。"
- usefulheirs.3000.c:0 "我们的一位陆军上将将是我的继承人。"
- usefulheirs.3000.d:0 "我们的一位科学家将是我的继承人。"
- usefulheirs.3000.e:0 "下一个继承人将接替你的位置。"
- usefulheirs.3000.f:0 "也许你仍然可以证明自己。"
- usefulheirs.3000.f.ad:0 "时机尚未成熟。"
+ usefulheirs.1000.name: "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
+ usefulheirs.1000.desc: "您传唤我，[root.GetRulerTitle]?"
+ usefulheirs.1000.a: "我需要你扮演一个不同的角色。"
+ usefulheirs.1000.a.tooltip: "我们将能够指派我们的继承人在我们的帝国内担任领导职务。"
+ usefulheirs.1000.b: "你不配做我的继承人"
+ usefulheirs.1000.b.ad: "现在是我指定继承人的时候了。"
+ usefulheirs.1000.b.tooltip: "我们可以从我们的领导人中寻找新的继承人，或者干脆剥夺继承人的继承权。"
+ usefulheirs.1000.c: "我打算退位。现在是你领导的时候了。"
+ usefulheirs.1000.c.tooltip: "我们将退位，我们的继承人将接任。"
+ usefulheirs.1000.d: "没关系。"
+ usefulheirs.2000.name: "[root.GetHeirTitle][event_target:heir_leader.GetName]"
+ usefulheirs.2000.cesc: "我今天该如何为[Root.GetName]效力？"
+ usefulheirs.2000.a: "作为$official_with_icon$"
+ usefulheirs.2000.b: "作为$commander_with_icon$"
+ usefulheirs.2000.c: "作为$scientist_with_icon$"
+ usefulheirs.2000.e: "事实上，你不需要承担任何其他责任。"
+ usefulheirs.3000.desc: "[root.GetRulerTitle]，我请求你重新考虑一下！"
+ usefulheirs.3000.ad.desc: "当然可以，[root.GetRulerTitle]"
+ usefulheirs.3100.name: "[root.GetRulerTitle] §H[root.ruler.GetName]§!"
+ usefulheirs.3100.desc: "谁配做我的继承人？"
+ usefulheirs.3000.a: "我们的一位总督将是我的继承人。"
+ usefulheirs.3000.b: "我们的一位舰队司令将是我的继承人。"
+ usefulheirs.3000.c: "我们的一位陆军上将将是我的继承人。"
+ usefulheirs.3000.d: "我们的一位科学家将是我的继承人。"
+ usefulheirs.3000.e: "下一个继承人将接替你的位置。"
+ usefulheirs.3000.f: "也许你仍然可以证明自己。"
+ usefulheirs.3000.f.ad: "时机尚未成熟。"
  usefulheirs.3110.name: "总督"
  usefulheirs.3120.name: "海军上将"
  usefulheirs.3110.desc: "谁有资格成为帝国的继承人？"
@@ -76,26 +76,26 @@ l_simp_chinese:
  uh_adoptive.2010.name: "§R指定的继承人死亡§!"
  uh_adoptive.2010.desc: "作为帝国的巨大损失，§Y继承人§!，[deceased_heir.GetTitle]§H[deceased_heir.GetName]§!已经去世。我们需要任命一个新的§Y继承人§!。"
  uh_adoptive.2010.a: "悲剧啊。"
- heir_fired_name:0 "[event_target:clone_leader_name_1.GetName]"
- heir_name_bold:0 "§H[event_target:heir_leader.GetName]§!"
- heir_name_bold_new:0 "§H[event_target:new_chosen_heir.GetName]§!"
- usefulheirs.4000.name:0 "[root.GetHeirTitle][event_target:heir_leader.GetName]"
- usefulheirs.4000.desc:0 "[root.GetRulerTitle]，您确定吗"
- usefulheirs.4000.a:0 "事实上，我不确定。我会进一步考虑的。"
- usefulheirs.4000.b:0 "我相信，是你的时候了。我将会退位。"
- usefulheirs.4000.b.tooltip:0 "我们将退位。"
- usefulheirs.4000.c:0 "我是。但是，我知道我仍然可以在其他方面做出贡献。"
- usefulheirs.4000.c.tooltip:0 "我们将退位并在我们的帝国内选择另一个人作为帝国的领导者。"
- usefulheirs.4010.name:0 "[root.GetHeirTitle][event_target:heir_leader.GetName]"
- usefulheirs.4010.desc:0 "如果那是你想要的。我不会让你失望的。你想让我做什么？"
- usefulheirs.4010.a:0 "我将作为总督领导我们的星域"
- usefulheirs.4010.b:0 "我将作为舰队司令领导我们的舰队。"
- usefulheirs.4010.c:0 "我将作为陆军上将领导我们的军队"
- usefulheirs.4010.d:0 "我将作为科学家寻求知识。"
- usefulheirs.4051.a:0 "我将领导。"
- response_they_shall_accept:0 "他们会接受的。"
- response_excellent:0 "杰出的"
- unity_fail_text:0 "§R要求§!§Y500§!£influence£§Y影响力§!"
+ heir_fired_name: "[event_target:clone_leader_name_1.GetName]"
+ heir_name_bold: "§H[event_target:heir_leader.GetName]§!"
+ heir_name_bold_new: "§H[event_target:new_chosen_heir.GetName]§!"
+ usefulheirs.4000.name: "[root.GetHeirTitle][event_target:heir_leader.GetName]"
+ usefulheirs.4000.desc: "[root.GetRulerTitle]，您确定吗"
+ usefulheirs.4000.a: "事实上，我不确定。我会进一步考虑的。"
+ usefulheirs.4000.b: "我相信，是你的时候了。我将会退位。"
+ usefulheirs.4000.b.tooltip: "我们将退位。"
+ usefulheirs.4000.c: "我是。但是，我知道我仍然可以在其他方面做出贡献。"
+ usefulheirs.4000.c.tooltip: "我们将退位并在我们的帝国内选择另一个人作为帝国的领导者。"
+ usefulheirs.4010.name: "[root.GetHeirTitle][event_target:heir_leader.GetName]"
+ usefulheirs.4010.desc: "如果那是你想要的。我不会让你失望的。你想让我做什么？"
+ usefulheirs.4010.a: "我将作为总督领导我们的星域"
+ usefulheirs.4010.b: "我将作为舰队司令领导我们的舰队。"
+ usefulheirs.4010.c: "我将作为陆军上将领导我们的军队"
+ usefulheirs.4010.d: "我将作为科学家寻求知识。"
+ usefulheirs.4051.a: "我将领导。"
+ response_they_shall_accept: "他们会接受的。"
+ response_excellent: "杰出的"
+ unity_fail_text: "§R要求§!§Y500§!£influence£§Y影响力§!"
  civic_adoptive_dynasties: "禅让王朝"
  civic_adoptive_dynasties_desc: "在遥远的过去，一个由无能的统治者组成的王朝导致了这个社会的传统，即君主通常从宫廷中最有能力的人中任命他们的继承人。这导致了一个非常稳定的帝国。然而，在指定继承人之前，继承人仍然是通过绝对长子继承制选择的。"
  civic_tooltip_adoptive_dynasties_effects: "指定继承人没有£stability£§Y稳定度§!惩罚或£influence£§Y影响力§!消耗。"
@@ -110,8 +110,8 @@ l_simp_chinese:
  dynastic_heir_capital_desc: "由于过去的创伤，新的王朝统治者在首都上造成了相当大的灾难。"
 
  # Councilors
- councilor_adoptive_dynasties:0 "推定继承人"
- councilor_adoptive_dynasties_female:0 "推定继承人"
- councilor_adoptive_dynasties_desc:0 "为了给他们最终的继承做准备 $TITLE$ 接受关于如何管理王国的广泛培训."
+ councilor_adoptive_dynasties: "推定继承人"
+ councilor_adoptive_dynasties_female: "推定继承人"
+ councilor_adoptive_dynasties_desc: "为了给他们最终的继承做准备 $TITLE$ 接受关于如何管理王国的广泛培训."
  mod_councilor_adoptive_dynasties_exp_gain: "$councilor_adoptive_dynasties_official_with_icon$ $exp_gain$"
- councilor_adoptive_dynasties_official_with_icon:0 "£ruler£ $councilor_adoptive_dynasties$"
+ councilor_adoptive_dynasties_official_with_icon: "£ruler£ $councilor_adoptive_dynasties$"
