--- a/localisation/useful_heirs_l_german.yml
+++ b/localisation/useful_heirs_l_german.yml
@@ -129,13 +129,13 @@ l_german:
  #uh_adoptive.1110.a: "We will prove ourselves."
  uh_adoptive.1110.a: "Wir werden uns beweisen."
 
- #uh_adoptive.2010.name: "§RDer designierte Erbe stirbt§!"
- uh_adoptive.2010.name: "§RDer designierte Erbe stirbt§!"
- #uh_adoptive.2010.desc: "In a great loss to the empire, [deceased_heir.GetTitle] §H[deceased_heir.GetName]§!, the §Yheir apparent§!, has passed away. A new §Yheir§! will need to be appointed."
- uh_adoptive.2010.desc: "Ein großer Verlust für das Reich ist der Tod von [deceased_heir.GetTitle] <@H[deceased_heir.GetName]§!, dem §YThronfolger§! Ein neuer §YErbe§! muss ernannt werden."
+ #uh_adoptive.2000.name: "§RDer designierte Erbe stirbt§!"
+ uh_adoptive.2000.name: "§RDer designierte Erbe stirbt§!"
+ #uh_adoptive.2000.desc: "In a great loss to the empire, [deceased_heir.GetTitle] §H[deceased_heir.GetName]§!, the §Yheir apparent§!, has passed away. A new §Yheir§! will need to be appointed."
+ uh_adoptive.2000.desc: "Ein großer Verlust für das Reich ist der Tod von [deceased_heir.GetTitle] <@H[deceased_heir.GetName]§!, dem §YThronfolger§! Ein neuer §YErbe§! muss ernannt werden."
 
- #uh_adoptive.2010.a: "Tragic."
- uh_adoptive.2010.a: "Tragisch."
+ #uh_adoptive.2000.a: "Tragic."
+ uh_adoptive.2000.a: "Tragisch."
 
  uh_adoptive.3015.name: "§RDynastic Succession Restored§!"
  uh_adoptive.3015.desc: "In einer großen Rede vor der Nation hat heute §Y[root.GetRulerTitle]§! §H[ruler.GetName]§! die Entscheidung bekannt, mit der Tradition zu brechen und die dynastische Erbfolge wieder einzuführen. Diese Entscheidung ist in der Bevölkerung nicht gut aufgenommen worden. Sie befürchten, dass der Thron wie in der Vergangenheit irgendwann an jemanden übergehen wird, der der Verantwortung nicht würdig ist."
@@ -156,27 +156,12 @@ l_german:
  usefulheirs.4000.a: "Ehrlich gesagt, bin ich mir nicht sicher. Ich werde weiter darüber nachdenken."
  #usefulheirs.4000.b: "I am sure. It's your time. I will retire."
  usefulheirs.4000.b: "Ich bin sicher. Deine Zeit ist gekommen. Ich werde mich in den Ruhestand begeben."
- #usefulheirs.4000.b.tooltip: "We will retire."
+ #usefulheirs.4000.b.tooltip: "[root.ruler.GetName] will retire from leadership completely."
  usefulheirs.4000.b.tooltip: "Wir werden uns in den Ruhestand begeben."
  #usefulheirs.4000.c: "I am. However, I know that I can still contribute in other capacities."
  usefulheirs.4000.c: "Das bin ich. Ich weiß jedoch, dass ich noch in anderen Bereichen einen Beitrag leisten kann."
- #usefulheirs.4000.c.tooltip: "We will retire from ruling and choose another leadership position within our empire."
+ #usefulheirs.4000.c.tooltip: "[root.ruler.GetName] will retire from ruling but stay in leadership."
  usefulheirs.4000.c.tooltip: "Wir werden uns vom Regieren in den Ruhestand begeben und eine andere Führungsposition innerhalb unseres Reiches wählen."
-
- #usefulheirs.4010.name: "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
- usefulheirs.4010.name: "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
- #usefulheirs.4010.desc: "If that is what you wish. I won't dissapoint you. What do you want to do?"
- usefulheirs.4010.desc: "Wenn Sie das wünschen. Ich werde Sie nicht enttäuschen. Was möchten Sie tun?"
-
- #usefulheirs.4010.a: "I will serve as an Official within our realm."
- usefulheirs.4010.a: "Ich werde einem unserer Sektoren als Gouverneur vorstehen."
- #usefulheirs.4010.b: "I will lead our troops as a Commander."
- usefulheirs.4010.b: "Ich werde unsere Truppen als Kommandeur führen."
- #usefulheirs.4010.d: "I will pursue knowledge as a Scientist"
- usefulheirs.4010.d: "Ich werde als Wissenschaftlerin nach Wissen streben."
-
- #usefulheirs.4051.a: "I will lead."
- usefulheirs.4051.a: "Ich werde sie führen."
 
  #response_they_shall_accept: "They will accept it."
  response_they_shall_accept: "Sie werden es akzeptieren."
