--- a/localisation/useful_heirs_l_french.yml
+++ b/localisation/useful_heirs_l_french.yml
@@ -17,7 +17,7 @@ l_french:
 
  usefulheirs.2000.AI: "AI"
 
- usefulheirs.1000.name: "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
+ usefulheirs.1000.name: "[root.GetHeirTitle] §H[heir_leader.GetName]§!"
  usefulheirs.1000.desc: "You summoned me, [root.GetRulerTitle]?"
 
  usefulheirs.1000.a: "I need you to take on a different role."
@@ -95,10 +95,10 @@ l_french:
  uh_adoptive.3015.desc: "In a grand speech before the nation today, §Y[root.GetRulerTitle]§! §H[ruler.GetName]§! announced decision to break with tradition and reinstate dynastic succession. This decision has not been well-received amongst our populace. They fear that, as in the past, the throne will eventually pass to someone unworthy of the responsibility."
 
  heir_fired_name: "[event_target:clone_leader_name_1.GetName]"
- heir_name_bold: "§H[event_target:heir_leader.GetName]§!"
+ heir_name_bold: "§H[heir_leader.GetName]§!"
  ruler_name_white: "§![root.ruler.GetName]§!"
 
- usefulheirs.4000.name: "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
+ usefulheirs.4000.name: "[root.GetHeirTitle] [heir_leader.GetName]"
  usefulheirs.4000.desc: "My [root.GetRulerTitle], are you sure?"
 
  usefulheirs.4000.a: "Actually, I'm not sure. I'll give it further consideration."
