--- a/localisation/useful_heirs_l_simp_chinese.yml
+++ b/localisation/useful_heirs_l_simp_chinese.yml
@@ -14,7 +14,7 @@ l_simp_chinese:
  edict_useful_heirs_2: "指定继承人"
  edict_useful_heirs_2_desc: "没有继承人对王国是一种危险。我必须指定一个继承人。"
  usefulheirs.2000.AI: "AI"
- usefulheirs.1000.name: "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
+ usefulheirs.1000.name: "[root.GetHeirTitle] §H[heir_leader.GetName]§!"
  usefulheirs.1000.desc: "您传唤我，[root.GetRulerTitle]?"
  usefulheirs.1000.a: "我需要你扮演一个不同的角色。"
  usefulheirs.1000.a.tooltip: "我们将能够指派我们的继承人在我们的帝国内担任领导职务。"
@@ -24,7 +24,7 @@ l_simp_chinese:
  usefulheirs.1000.c: "我打算退位。现在是你领导的时候了。"
  usefulheirs.1000.c.tooltip: "我们将退位，我们的继承人将接任。"
  usefulheirs.1000.d: "没关系。"
- usefulheirs.2000.name: "[root.GetHeirTitle][event_target:heir_leader.GetName]"
+ usefulheirs.2000.name: "[root.GetHeirTitle][heir_leader.GetName]"
  usefulheirs.2000.cesc: "我今天该如何为[Root.GetName]效力？"
  usefulheirs.2000.a: "作为$official_with_icon$"
  usefulheirs.2000.b: "作为$commander_with_icon$"
@@ -77,9 +77,9 @@ l_simp_chinese:
  uh_adoptive.2000.desc: "作为帝国的巨大损失，§Y继承人§!，[deceased_heir.GetTitle]§H[deceased_heir.GetName]§!已经去世。我们需要任命一个新的§Y继承人§!。"
  uh_adoptive.2000.a: "悲剧啊。"
  heir_fired_name: "[event_target:clone_leader_name_1.GetName]"
- heir_name_bold: "§H[event_target:heir_leader.GetName]§!"
+ heir_name_bold: "§H[heir_leader.GetName]§!"
  heir_name_bold_new: "§H[event_target:new_chosen_heir.GetName]§!"
- usefulheirs.4000.name: "[root.GetHeirTitle][event_target:heir_leader.GetName]"
+ usefulheirs.4000.name: "[root.GetHeirTitle][heir_leader.GetName]"
  usefulheirs.4000.desc: "[root.GetRulerTitle]，您确定吗"
  usefulheirs.4000.a: "事实上，我不确定。我会进一步考虑的。"
  usefulheirs.4000.b: "我相信，是你的时候了。我将会退位。"
