--- a/localisation/useful_heirs_l_spanish.yml
+++ b/localisation/useful_heirs_l_spanish.yml
@@ -17,7 +17,7 @@ l_spanish:
 
  usefulheirs.2000.AI: "AI"
 
- usefulheirs.1000.name: "[root.GetHeirTitle] §H[event_target:heir_leader.GetName]§!"
+ usefulheirs.1000.name: "[root.GetHeirTitle] §H[heir_leader.GetName]§!"
  usefulheirs.1000.desc: "You summoned me, [root.GetRulerTitle]?"
 
  usefulheirs.1000.a: "I need you to take on a different role."
@@ -92,10 +92,10 @@ l_spanish:
  uh_adoptive.2000.a: "Tragic."
 
  heir_fired_name: "[event_target:clone_leader_name_1.GetName]"
- heir_name_bold: "§H[event_target:heir_leader.GetName]§!"
+ heir_name_bold: "§H[heir_leader.GetName]§!"
  ruler_name_white: "§![root.ruler.GetName]§!"
 
- usefulheirs.4000.name: "[root.GetHeirTitle] [event_target:heir_leader.GetName]"
+ usefulheirs.4000.name: "[root.GetHeirTitle] [heir_leader.GetName]"
  usefulheirs.4000.desc: "My [root.GetRulerTitle], are you sure?"
 
  usefulheirs.4000.a: "Actually, I'm not sure. I'll give it further consideration."
